# rego

./: Cargo.toml
rego/: Cargo.toml
rego-app/: Cargo.toml
rego-app/src/: auth.rs  err.rs  handler.rs
rego-domain/: Cargo.toml
rego-domain/src/: access_token.rs  cred.rs  error.rs  jwt.rs  lib.rs
rego-err/: Cargo.toml
rego-infra/: Cargo.toml
rego-infra/src/: postgres.rs
rego-warp/: Cargo.toml
rego-warp/src/: auth.rs  err.rs  lib.rs
rego/src/: lib.rs
src/: err.rs  lib.rs
src/app/: auth.rs  err.rs  handler.rs  mod.rs  res.rs
src/app/warp/: auth.rs  err.rs  handler.rs  mod.rs
src/domain/: access_token.rs  cred.rs  jwt.rs  mod.rs
src/infra/: postgres.rs
