[package]
name = "rego"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
futures = "0.3"
http = "0.2"
jsonwebtoken = "7.1"
pbkdf2 = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
tokio = { version = "0.2", features = ["blocking"] }
warp = "0.2"
