[package]
name = "rego-app"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rego-domain = { path = "../rego-domain" }

anyhow = "1.0"
futures = "0.3"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
warp = "0.2"
