[package]
name = "rego-infra"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
smol = "0.1"
